update servce section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                             </li>
                                             <li><a href="about.html">About</a>
                                             </li>
-                                            <li class="has-menu-children"><a href="#">Service</a>
+                                            <li class="has-menu-children"><a href="#">Service <span class="ml-13"><i class="fa-solid fa-angle-down"></i></span> </a>
                                                 <ul class="sub-menu">
                                                     <li><a href="">Team Member</a></li>
                                                     <li><a href="">Team Finance</a></li>
@@ -64,7 +64,7 @@
                                                 </ul>
                                             </li>
 
-                                            <li class="has-menu-children"><a href="portfolio.html">Page</a>
+                                            <li class="has-menu-children"><a href="portfolio.html">Page <span class="ml-13"><i class="fa-solid fa-angle-down"></i></span> </a>
                                                 <ul class="sub-menu">
                                                     <li><a href="">Team Member</a></li>
                                                     <li><a href="">Team Finance</a></li>
@@ -75,7 +75,7 @@
                                                 </ul>
                                             </li>  
                                             
-                                            <li class="has-menu-children"><a href="blog.html">Blogs</a>
+                                            <li class="has-menu-children"><a href="blog.html">Blogs <span class="ml-13"><i class="fa-solid fa-angle-down"></i></span></a>
                                                 <ul class="sub-menu">
                                                     <li><a href="">Team Member</a></li>
                                                     <li><a href="">Team Finance</a></li>
@@ -231,7 +231,9 @@
                             <div class="row g-0">
                                 <div class="col-xxl-4">
                                     <div class="philip-service-box">
-                                        
+                                        <div class="philip-service-item">
+                                            <span></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
