--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
                                                 <ul class="sub-menu">
                                                     <li><a href="">Team Member</a></li>
                                                     <li><a href="">Team Finance</a></li>
-                                                    <li><a href="">Team Details</a></li>
+                                                    <li  class="has-menu-children"><a href="">Team Details <span class="ml-13"><i class="fa-solid fa-angle-down"></i></span></a>
+                                                        <ul class="sub-menu-three">
+                                                            <li><a href="">Team Member</a></li>
+                                                            <li><a href="">Team Finance</a></li>
+                                                            <li><a href="">Team Details</a></li>
+                                                            <li><a href="">Services</a></li>
+                                                            <li><a href="">Services Finance</a></li>
+                                                        </ul>
+                                                    </li>
                                                     <li><a href="">Services</a></li>
                                                     <li><a href="">Services Finance</a></li>
                                                     <li><a href="">Service Details</a></li>
