add service section

--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
                                     <div class="philip-banner-content">
                                         <p>Welcome To My World</p>
                                         <h2 class="philp-heading">Hi! I'm Professional </h2>
-                                        <h2 class="philp-heading"> <span class="animation">Web Developer</span></h2>                                                                   
+                                        <h2 class="philp-heading"> <span class="animation"></span></h2>                                                                   
                                         <div class="philip-banner-area-details d-flex align-items-center">
                                             <div class="philip-button mr-38">
                                                 <a href="#">Learn More</a>
                                             </div>
                                             <div class="philip-video d-flex">
-                                                <a href="£" class="paly-animation-btn mr-20">
+                                                <a href="https://www.youtube.com/watch?v=ODfy2YIKS1M" class="paly-animation-btn popup-video mr-20">
                                                     <i class="fa-solid fa-play"></i>
                                                   </a>
                                                   <div class="philip-video-watch mt-16">
@@ -236,15 +236,83 @@
                                     industry-wide, advanced, and quality services.
                                 </p>
                             </div>
-                            <div class="row g-0">
-                                <div class="col-xxl-4">
-                                    <div class="philip-service-box">
-                                        <div class="philip-service-item">
-                                            <span></span>
+                            <div class="philip-service-box-area mt-65">
+                                <div class="row g-0">
+                                    <div class="col-xxl-4 box-border">
+                                        <div class="philip-service-box ">
+                                            <div class="philip-service-item">
+                                                <span><i class="fa-solid fa-desktop"></i></span>
+                                                <h3>Web Developer</h3>
+                                            </div>
+                                            <div class="philip-service-content">
+                                                <p>We are a leading website design and
+                                                     web development company.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xxl-4 box-border">
+                                        <div class="philip-service-box">
+                                            <div class="philip-service-item">
+                                                <span><i class="fa-solid fa-desktop"></i></span>
+                                                <h3>Web Developer</h3>
+                                            </div>
+                                            <div class="philip-service-content">
+                                                <p>We are a leading website design and
+                                                     web development company.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xxl-4 box-border">
+                                        <div class="philip-service-box">
+                                            <div class="philip-service-item">
+                                                <span><i class="fa-solid fa-desktop"></i></span>
+                                                <h3>Web Developer</h3>
+                                            </div>
+                                            <div class="philip-service-content">
+                                                <p>We are a leading website design and
+                                                     web development company.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xxl-4 box-border">
+                                        <div class="philip-service-box">
+                                            <div class="philip-service-item">
+                                                <span><i class="fa-solid fa-desktop"></i></span>
+                                                <h3>Web Developer</h3>
+                                            </div>
+                                            <div class="philip-service-content">
+                                                <p>We are a leading website design and
+                                                     web development company.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xxl-4 box-border">
+                                        <div class="philip-service-box">
+                                            <div class="philip-service-item">
+                                                <span><i class="fa-solid fa-desktop"></i></span>
+                                                <h3>Web Developer</h3>
+                                            </div>
+                                            <div class="philip-service-content">
+                                                <p>We are a leading website design and
+                                                     web development company.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xxl-4 box-border">
+                                        <div class="philip-service-box">
+                                            <div class="philip-service-item">
+                                                <span><i class="fa-solid fa-desktop"></i></span>
+                                                <h3>Web Developer</h3>
+                                            </div>
+                                            <div class="philip-service-content">
+                                                <p>We are a leading website design and
+                                                     web development company.</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            
                         </div>
                     </div>
             <!-- service-section-end  -->
