--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 </div>
                                 <div class="col-xxl-6">
                                     <div class="philip-about-content">
-                                        <div class="philip-section-wrap-title">
+                                        <div class="philip-section-wrap-title mb-39">
                                             <p class="philip-section-title">About Me</p>
                                             <h2 class="philip-section-heading">
                                                 Trusted Development
@@ -200,7 +200,7 @@
                                             </p>
                                         </div>
                                         <div class="philip-progress-ber">
-                                            <div class="philip_progress_single pt-30">
+                                            <div class="philip_progress_single ">
                                                 <div class="progress_label  "  >
                                                     <h5>Web Development</h5>
                                                 </div>
@@ -208,7 +208,7 @@
                                                     <div class="progress-bar  "  role="progressbar" data-width="90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
                                                   </div>
                                             </div>
-                                            <div class="philip_progress_single pt-30">
+                                            <div class="philip_progress_single">
                                                 <div class="progress_label "  >
                                                     <h5>Web Development</h5>
                                                 </div>
