--- a/index.html
+++ b/index.html
@@ -189,15 +189,17 @@
                                     <div class="philip-about-content">
                                         <div class="philip-section-wrap-title mb-39">
                                             <p class="philip-section-title">About Me</p>
-                                            <h2 class="philip-section-heading">
-                                                Trusted Development
-                                                With Satisfaction</h2>
-                                            <p class="philip-section-content">
-                                                We deliver web and mobile app development services to
-                                                 global businesses since 1998, with 100% project delivery 
-                                                 success. Hire the best programmers at affordable prices. 
-                                                 Our design-focused approach and project.
-                                            </p>
+                                            <div>
+                                                <h2 class="philip-section-heading">
+                                                    Trusted Development
+                                                    With Satisfaction</h2>
+                                                <p class="philip-section-content">
+                                                    We deliver web and mobile app development services to
+                                                     global businesses since 1998, with 100% project delivery 
+                                                     success. Hire the best programmers at affordable prices. 
+                                                     Our design-focused approach and project.
+                                                </p>
+                                            </div>
                                         </div>
                                         <div class="philip-progress-ber">
                                             <div class="philip_progress_single ">
