--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                                     <span class="anim"></span>
                                                     <span class="anim"></span>
                                                     <span class="anim"></span>
-                                                    <a href="https://themeforest.net/item/dizme-personal-portfolio-html-template/36415714" target="_blank" class="pricing-info anim"><i class="fa-solid fa-play"></i></a>
+                                                    <a href="" target="_blank" class="pricing-info anim"><i class="fa-solid fa-play"></i></a>
                                                 </div>
                                                 <div>
                                                     <div class="philip-video-watch">
