--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                                     <span class="anim"></span>
                                                     <span class="anim"></span>
                                                     <span class="anim"></span>
-                                                    <a href="" class="pricing-info  popup-video  anim" href="https://www.youtube.com/watch?v=ODfy2YIKS1M"><i class="fa-solid fa-play"></i></a>
+                                                    <a href="https://www.youtube.com/watch?v=ODfy2YIKS1M" class="pricing-info popup-video anim"><i class="fa-solid fa-play"></i></a>
                                                 </div>
                                                 <div>
                                                     <div class="philip-video-watch">
