--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
                                             <h2 class="philp-heading ">Hi! I'm Professional </h2>
                                             <h2 class="philp-heading d-block"> <span class="animation"></span></h2> 
                                         </div>                                                                  
-                                        <div class="philip-banner-area-details d-flex align-items-center">
+                                        <div class="philip-banner-area-details d-flex align-items-center mb-44">
                                             <div class="philip-button mr-38">
                                                 <a href="#">Learn More</a>
                                             </div>
                                             <div class="philip-video d-flex">
-                                                <div class="dizme_tm_intro_fixed_price mr-20">
+                                                <div class="philip-video-anmation mr-20">
                                                     <span class="anim"></span>
                                                     <span class="anim"></span>
                                                     <span class="anim"></span>
@@ -147,9 +147,9 @@
                                             </div>
                                             
                                         </div>
-                                        <div class="philip-social_wrapper mt-44">
+                                        <div class="philip-social_wrapper">
                                             <div class="philip-social">
-                                                <p>Follow</p>
+                                                <p class="mb-16">Follow</p>
                                                 <ul class="philip-social-list d-flex">
                                                     <li><a href=""><span><i class="fa-brands fa-facebook-f"></i></span></a></li>
                                                     <li><a href=""><i class="fa-brands fa-dribbble"></i></a></li>
