--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
             <!-- banner-section-end  -->
             <!-- about section start -->
-                    <div class="philip-about-area  philip-padding-120 philip-bg-gray">
+                    <div class="philip-about-area  pt-120 philip-bg-gray">
                         <div class="container">
                             <div class="row">
                                 <div class="col-xxl-6">
@@ -212,7 +212,7 @@
                                             </div>
                                             <div class="philip_progress_single">
                                                 <div class="progress_label "  >
-                                                    <h5>Web Development</h5>
+                                                    <h5>UI/UX Design</h5>
                                                 </div>
                                                 <div class="progress">
                                                     <div class="progress-bar  "  role="progressbar" data-width="76%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100"><span>76%</span></div>
@@ -229,7 +229,7 @@
                     </div>     
             <!-- about section end -->
             <!-- service-section-start  -->
-                    <div class="philip-service-area philip-padding-120">
+                    <div class="philip-service-area pt-120">
                         <div class="container">
                             <div class="philip-section-wrap-title text-center">
                                 <p class="philip-section-title">Creative Services</p>
