--- a/index.html
+++ b/index.html
@@ -476,9 +476,9 @@
                                     services Makes best effort
                                 </p>
                             </div>
-                            <div class="philip-portfolio" >
+                            <div class="philip-portfolio portfolio-grid-wrapper" >
                                 <div class="row g-0">
-                                    <div class="col-xxl-4">
+                                    <div class="col-xxl-4 portfolio-grid-item">
                                         <div class="philip-portfolio-item image">
                                             <img src="assets/img/portfolio/1.png" alt="">
                                             <div class="hoverinner d-flex justify-content-center align-items-center ">
@@ -493,22 +493,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="philip-portfolio-item image">
-                                            <img src="assets/img/portfolio/4.png" alt="">
-                                            <div class="hoverinner d-flex justify-content-center align-items-center ">
-                                                <div class="hoverinner1"></div>
-                                                <div class="hoverinner2"></div>
-                                                <div class="hoverinner-content">
-                                                    <h4>Artificial Intelligence</h4>
-                                                    <ul class="d-flex justify-content-center">
-                                                        <li><span><i class="far fa fa-facebook" aria-hidden="true"></i></span></li>
-                                                        <li><span><i class="far fa fa-twitch" aria-hidden="true"></i></span></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
                                     </div>
-                                    <div class="col-xxl-4">
+                                    <div class="col-xxl-4 portfolio-grid-item">
                                         <div class="philip-portfolio-item image">
                                             <img class="lange-image" src="assets/img/portfolio/image.png" alt="">
                                             <div class="hoverinner d-flex justify-content-center align-items-center ">
@@ -524,7 +510,23 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-xxl-4">
+                                    <div class="col-xxl-4 portfolio-grid-item">
+                                        <div class="philip-portfolio-item image">
+                                            <img src="assets/img/portfolio/4.png" alt="">
+                                            <div class="hoverinner d-flex justify-content-center align-items-center ">
+                                                <div class="hoverinner1"></div>
+                                                <div class="hoverinner2"></div>
+                                                <div class="hoverinner-content">
+                                                    <h4>Artificial Intelligence</h4>
+                                                    <ul class="d-flex justify-content-center">
+                                                        <li><span><i class="far fa fa-facebook" aria-hidden="true"></i></span></li>
+                                                        <li><span><i class="far fa fa-twitch" aria-hidden="true"></i></span></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xxl-4 portfolio-grid-item">
                                         <div class="philip-portfolio-item image">
                                             <img src="assets/img/portfolio/3.png" alt="">
                                             <div class="hoverinner d-flex justify-content-center align-items-center ">
@@ -539,6 +541,8 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    </div>
+                                    <div class="col-xxl-4 portfolio-grid-item">
                                         <div class="philip-portfolio-item image">
                                             <img src="assets/img/portfolio/5.png" alt="">
                                             <div class="hoverinner d-flex justify-content-center align-items-center ">
@@ -591,6 +595,7 @@
         <script src="assets/js/odometer.min.js"></script>
         <script src="assets/js/appear.min.js"></script>
         <script src="assets/js/back-to-top.min.js"></script>
+        <script src="assets/js/isotop.min.js"></script>
         <script src="assets/js/main.js"></script>
         <script src="assets/js/admin.js"></script>
         <!-- typed cdn  -->
