add qualificaton section

--- a/index.html
+++ b/index.html
@@ -636,7 +636,66 @@
             <!-- Qualifications-section-end -->
 
             <!-- available-section-start  -->
-
+                    <section class="philip-available-area pt-120 pb-120 philip-bg-gray">
+                        <div class="container">
+                            <div class="row gx-5">
+                                <div class="col-xxl-6">
+                                    <div class="philip-available" ">
+                                        <div class="philip-available-content">
+                                            <h6>Available</h6>
+                                            <h3>Les't Work Together
+                                                On Your Porject</h3>
+                                            <p class="mt-24">Have an idea? Work with us and see how it goes. We promise to go the extra mile for every project that we take onboard.</p>
+                                            <div class="philip-button2 mt-60">
+                                                <a href="#">Here Me</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xxl-6">
+                                    <div class="philip-about-content mt-54">
+                                        <div class="philip-section-wrap-title mb-39">
+                                            <div>
+                                                <h2 class="philip-section-heading">
+                                                    I'm Growing Business
+                                                    With Technology</h2>
+                                                <p class="philip-section-content">
+                                                    Web design agency and software development company with a large pool of software developers available for dedicated and fixed time/cost projects. 
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="philip-progress-ber">
+                                            <div class="philip_progress_single ">
+                                                <div class="progress_label  ">
+                                                    <h5>Adobe Photoshop</h5>
+                                                </div>
+                                                <div class="progress">
+                                                    <div class="progress-bar  " role="progressbar" data-width="90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span>90%</span></div>
+                                                  </div>
+                                            </div>
+                                            <div class="philip_progress_single">
+                                                <div class="progress_label ">
+                                                    <h5>Adobe Illustrator</h5>
+                                                </div>
+                                                <div class="progress">
+                                                    <div class="progress-bar  " role="progressbar" data-width="76%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;"><span>76%</span></div>
+                                                  </div>
+                                            </div>
+                                            <div class="philip_progress_single">
+                                                <div class="progress_label ">
+                                                    <h5>Adobe XD</h5>
+                                                </div>
+                                                <div class="progress">
+                                                    <div class="progress-bar  " role="progressbar" data-width="76%" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;"><span>76%</span></div>
+                                                  </div>
+                                            </div>
+                                        </div>
+                                       
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
             <!-- available-section-end -->
 
 
