--- a/about.html
+++ b/about.html
@@ -51,12 +51,12 @@
                     </li>
                     <li><a href="about.html">About</a>
                     </li>
-                    <li class="has-menu-children"><a href="#">Service</a>
+                    <li class="has-menu-children"><a href="service.html">Service</a>
                       <ul class="sub-menu">
                         <li><a href="">Team Member</a></li>
                         <li><a href="">Team Finance</a></li>
                         <li class="has-menu-children"><a href="">Team Details</a>
-                          <ul class="sub-menu-three">
+                          <ul class="sub-menu">
                             <li><a href="">Team Member</a></li>
                             <li><a href="">Team Finance</a></li>
                             <li><a href="">Team Details</a></li>
@@ -64,7 +64,7 @@
                             <li><a href="">Services Finance</a></li>
                           </ul>
                         </li>
-                        <li><a href="">Services</a></li>
+                        <li><a href="service.html">Services</a></li>
                         <li><a href="">Services Finance</a></li>
                         <li><a href="">Service Details</a></li>
                         <li><a href="">Pricing Plan</a></li>
@@ -92,7 +92,7 @@
                         <li><a href="">Team Details</a></li>
                       </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
 
                   </ul>
                 </nav>
@@ -156,7 +156,7 @@
     <div class="philip-about-section  pt-224 pb-162">
       <div class="container">
         <div class="row gx-5">
-          <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12">
+          <div class="col-xxl-6 col-xl-6 col-lg-12 col-md-12">
             <div class="philip-about-image-content">
               <div class="philip-about-image">
                 <div class="philip-image-area-border">
@@ -203,7 +203,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12">
+          <div class="col-xxl-6 col-xl-6 col-lg-12 col-md-12">
             <div class="philip-about-content">
               <div class="philip-section-wrap-title mb-39">
                 <p class="philip-section-title">About Me</p>
