--- a/service.html
+++ b/service.html
@@ -51,12 +51,12 @@
                     </li>
                     <li><a href="about.html">About</a>
                     </li>
-                    <li class="has-menu-children"><a href="#">Service</a>
+                    <li class="has-menu-children"><a href="service.html">Service</a>
                       <ul class="sub-menu">
                         <li><a href="">Team Member</a></li>
                         <li><a href="">Team Finance</a></li>
                         <li class="has-menu-children"><a href="">Team Details</a>
-                          <ul class="sub-menu-three">
+                          <ul class="sub-menu">
                             <li><a href="">Team Member</a></li>
                             <li><a href="">Team Finance</a></li>
                             <li><a href="">Team Details</a></li>
@@ -64,7 +64,7 @@
                             <li><a href="">Services Finance</a></li>
                           </ul>
                         </li>
-                        <li><a href="">Services</a></li>
+                        <li><a href="service.html">Services</a></li>
                         <li><a href="">Services Finance</a></li>
                         <li><a href="">Service Details</a></li>
                         <li><a href="">Pricing Plan</a></li>
@@ -92,7 +92,7 @@
                         <li><a href="">Team Details</a></li>
                       </ul>
                     </li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
 
                   </ul>
                 </nav>
